# pqsign-bench

./: .gitignore  README.md  RESULTADOS.tex
FINALRESULTSBERRYPI/: results.csv  system_info.json  system_label.txt
FINALRESULTSBERRYPI/subTables/cpu_base/: bench_all_256_cpu_base.csv  bench_keygen_-_cpu_base.csv  bench_sign_100000000_cpu_base.csv  bench_sign_256_cpu_base.csv  bench_verify_100000000_cpu_base.csv  bench_verify_256_cpu_base.csv
FINALRESULTSBERRYPI/subTables/cpu_net/: bench_all_100000000_cpu_net.csv  bench_all_100000_cpu_net.csv  bench_sign_100000000_cpu_net.csv  bench_verify_100000_cpu_net.csv  bench_verify_256_cpu_net.csv
FINALRESULTSBERRYPI/subTables/cpu_raw/: bench_all_100000000_cpu_raw.csv  bench_sign_100000_cpu_raw.csv  bench_verify_100000000_cpu_raw.csv  bench_verify_256_cpu_raw.csv
FINALRESULTSBERRYPI/subTables/mem_base/: bench_all_100000000_mem_base.csv  bench_sign_100000000_mem_base.csv  bench_sign_256_mem_base.csv  bench_verify_256_mem_base.csv  (+2 more)
FINALRESULTSUBUNTU/: system_info.json  system_label.txt
PAPER-RESULTS/RESULTS_UBUNTU_LOCAL/: results.csv
env/: openssl-oqs.cnf  source_env_native.sh
paper-results/localubuntu_results/: results.csv  system_info.json
paper-results/raspberrypi3b_results/: system_info.json
scripts/: generateOqsProviderUpdated.yml  pi_00_setup_deps.sh  pi_01_fetch_thirdparty.sh  pi_02_build.sh  setup_cpu_performance.sh  ubuntu_00_setup_deps.sh  ubuntu_01_fetch_thirdparty.sh  ubuntu_02_build.sh
src/: CMakeLists.txt  bench_prep.c  bench_worker.c  crypto_core.c  crypto_core.h  plot.py
src/scripts/: run_bench.sh
(+299 files in other folders)
